--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,7 @@
         <button type="submit">Submit Issue</button>
       </form><br>
       <h3>Delete issue on <i>apitest</i></h3>
-      <form id="testForm2" class="border">
+      <form id="testForm3" class="border">
         <input type="text" name="_id" placeholder="_id" style="width: 100px" required=''><br>
         <button type="submit">Delete Issue</button>
       </form>
@@ -74,7 +74,7 @@
       $(function() {
         $('#testForm').submit(function(e) {
           $.ajax({
-            url: '/api/issues/apitest',
+            url: '/api/issues/api',
             type: 'post',
             data: $('#testForm').serialize(),
             success: function(data) {
@@ -85,7 +85,7 @@
         });
         $('#testForm2').submit(function(e) {
           $.ajax({
-            url: '/api/issues/apitest',
+            url: '/api/issues/api',
             type: 'put',
             data: $('#testForm2').serialize(),
             success: function(data) {
@@ -96,7 +96,7 @@
         });
         $('#testForm3').submit(function(e) {
           $.ajax({
-            url: '/api/issues/apitest',
+            url: '/api/issues/api',
             type: 'delete',
             data: $('#testForm3').serialize(),
             success: function(data) {
